2006-02-20  Richard Levitte  <richard@levitte.org>

	* monotone.cc (cpp_main), options.hh, ui.cc (redirect_log_to),
	ui.hh (struct user_interface): Add --log option, to redirect the
	log lines to a file.

	* monotone.texi (OPTIONS): Document it.

	* po/sv.po: Translate help for this option to Swedish.

	* testsuite.at, tests/t_log_to_file.at: Test it.

2006-02-20  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (remove_version): get rid of dangling deltas,
	don't try to put data or deltas if they already exist.
	* tests/t_db_kill_rev_locally_2.at: un-XFAIL

2006-02-20  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Add an ADD_FILE variant that allows use of
	alternate databases.

	* tests/t_netsync_permissions.at: Missed some cases of the
	database locking race.

2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: Fixup after xxdiff lossage.

2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* roster_merge.cc (make_lifecycle_objs): Fix test bug.

2006-02-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Add a REVERT_TO variant that allows use of
	alternate databases.

	* tests/t_netsync_permissions.at: Attempt to avoid a database
	locking race in this test that is causing spurious failures by
	using the new REVERT_TO variant to cause revert to be performed
	using the "client" database.

2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (shallow_equal): Publically expose.
	* roster.cc, roster_merge.cc: Various compile fixes.
	
2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* roster_merge.{hh,cc}: Make terminology more consistent.
	"marking_map" type -> "markings" name, "marking_t" type ->
	"marking" name.
	
2006-02-19  Nathaniel Smith  <njs@pobox.com>

	* roster.{hh,cc} (testing_node_id_source): Make this node source
	available to unit tests in other files.
	* roster_merge.cc (test_roster_merge_node_lifecycle): New test.
	Still quite ugly.

2006-02-18  Nathaniel Smith  <njs@pobox.com>
